Added create result from files command
